[package]
name = "comlogic"
version = "0.1.0"
authors = ["alexanderacker"]
edition = "2018"
license = "GPL-2.0"

[dependencies]

[target.'cfg(target_arch = "wasm32")'.dependencies]
cfg-if = "*"
wee_alloc = {version = "*", optional = true }
wasm-bindgen = "*"

[lib]
name = "comlogic"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "comlogic-repl"
path = "src/repl.rs"

[profile.dev.package."*"]
opt-level = 3